--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -124,7 +124,10 @@ h4 {
 
 .social {
   margin: 0 8px; }
-  @media (max-height: 800px) {
+  @media (max-width: 550px) {
+    .social {
+      margin-top: 24px; } }
+  @media (max-height: 700px) {
     .social {
       display: none;
       visibility: hidden; } }
@@ -205,7 +208,18 @@ h4 {
     font-size: 6em !important; } }
 
 #about {
-  min-height: 200px; }
+  min-height: 200px;
+  clear: both; }
+
+#contact #content {
+  padding-left: 20px; }
+
+#contact h4, #contact h2 {
+  margin-bottom: 5px; }
+
+#contact #contact-social a {
+  display: inline-block;
+  margin-right: 10px; }
 
 #footer {
   position: absolute;
@@ -226,5 +240,8 @@ h4 {
     position: relative;
     z-index: 100;
     background-color: #ffffff; }
+
+#recaptcha {
+  margin-top: 50px; }
 
 /*# sourceMappingURL=style.css.map */
