--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -123,7 +123,9 @@ h4
 
 .social
   margin: 0 8px
-  @media (max-height: 800px)
+  @media (max-width: 550px)
+    margin-top: 24px
+  @media (max-height: 700px)
     display: none
     visibility: hidden
 
@@ -204,6 +206,16 @@ h4
 
 #about
   min-height: 200px
+  clear: both
+
+#contact
+  #content
+    padding-left: 20px
+  h4, h2
+    margin-bottom: 5px
+  #contact-social a
+    display: inline-block
+    margin-right: 10px
 
 #footer
   position: absolute
@@ -224,3 +236,6 @@ h4
     position: relative
     z-index: 100
     background-color: #ffffff
+
+#recaptcha
+  margin-top: 50px
