--- a/views/index.jade
+++ b/views/index.jade
@@ -42,6 +42,19 @@ block head
         ]
         let carouselIndex = 0;
 
+        $("head").ready(function() {
+            $("<link>")
+                .attr("rel", "stylesheet")
+                .attr("type", "text/css")
+                .attr("href", "https://fonts.googleapis.com/css?family=Bitter")
+                .appendTo($("head"));
+        })
+
+        // Load image post-HTML parse for faster render speeds
+        $("#me").ready(function() {
+            $("#me").attr("src", "images/buggy.jpg");
+        })
+
         $("#carousel").ready(function() {
             let $next = $(".next");
             let $current = $(".current");
@@ -108,7 +121,7 @@ block content
     div#intro
         div#intro-content
             h1#name Hi, I'm Erik
-            img#me(src="images/buggy.jpg")
+            img#me(src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=")
 
             div#carousel
                 div.current.slide
