--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,7 +5,7 @@ html
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='icon', href='/favicon.ico?', type="image/x-icon")
-    script(src="https://code.jquery.com/jquery-3.2.1.min.js", defer)
+    script(src="https://code.jquery.com/jquery-3.2.1.min.js")
     script(src="fa/js/fontawesome.min.js", defer)
     script(src="fa/js/packs/regular.js", defer)
     script(src="fa/js/packs/light.js", defer)
