--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,16 +1,55 @@
 doctype html
 html
   head
-    meta(name="viewport", content="width=device-width, initial-scale=1")
-    title= title
+    // Includes
+
     link(rel='stylesheet', href='/stylesheets/style.css')
-    link(rel='icon', href='/favicon.ico?', type="image/x-icon")
     script(src="https://code.jquery.com/jquery-3.2.1.min.js")
     script(src="fa/js/fontawesome.min.js", defer)
     script(src="fa/js/packs/regular.js", defer)
     script(src="fa/js/packs/light.js", defer)
     script(src="fa/js/packs/custom.js", defer)
     script(src="fa/js/packs/brands.js", defer)
+
+    // /Includes
+    // Meta data
+
+    - defaultColor = "#31A56F"
+    - pageName = "Erik Roberts"
+    - description = "Full-stack Developer, Hypixel Moderator"
+    - pageUrl = "https://aws.bugg.co/"
+
+    title= title
+    meta(name="viewport", content="width=device-width, initial-scale=1")
+    link(rel='icon', href='/favicon.ico?', type="image/x-icon")
+
+
+    meta(name='Content-Type', content='text/html', charset='utf-8')
+    meta(name="description", content=description)
+    meta(name="apple-mobile-web-app-capable", content="yes")
+    meta(name="apple-mobile-web-app-title", content=pageName)
+    meta(name="application-name", content=pageName)
+    meta(name="msapplication-tooltip", content=description)
+    meta(name="msapplication-starturl", content=pageUrl)
+
+    link(rel="apple-touch-icon" sizes="256x256" href="/favicon.ico")
+    link(rel="apple-touch-icon" sizes="360x360" href="/images/buggy.jpg")
+    meta(name="msapplication-TileImage" content="/images/buggy.jpg")
+    meta(name="twitter:card" content="summary")
+    meta(name="twitter:site" content="@bugfroggy")
+    meta(name="twitter:image" content="/images/buggy.jpg")
+    meta(name="twitter:title" content=pageName)
+    meta(name="twitter:description" content=description)
+    meta(property="og:type" content="website")
+    meta(property="og:title" content=pageName)
+    meta(property="og:description" content=description)
+    meta(property="og:url" content=pageUrl)
+    meta(property="og:image" content="/images/buggy.jpg")
+    meta(name="theme-color", content=defaultColor)
+    meta(name="msapplication-TileColor", content=defaultColor)
+    meta(name="msapplication-navbutton-color", content=defaultColor)
+
+    // /Meta data
     block head
   body
     block content
