--- a/views/index.jade
+++ b/views/index.jade
@@ -229,6 +229,33 @@ block content
                 | Minecraft server, for 3+ years. You may find my profile there by&nbsp
                 a(href="https://hypixel.net/members/52450/") clicking here
                 |.
+            div#skills
+                div#languages.col-2
+                    h3 Languages
+                    ul
+                        li Java
+                        li PHP
+                        li Javascript
+                        li HTML
+                        li CSS
+                        li Sass
+                        li Pug/Jade
+                        li SQL
+                        li Bash
+                div#frameworks.col-2
+                    h3 Frameworks & Tools
+                    ul
+                        li jQuery
+                        li Node.js
+                        li Cloudflare
+                        li Nginx
+                        li Git
+                        li IntelliJ
+                        li Amazon Web Services
+                        li Composer
+                        li Google Analytics
+                        li Google Drive
+                        li Bootstrap
         div#contact
             h2 Contact
             div#content
