optimized CSS, centralizing duplicate <hr> styles

--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -40,6 +40,9 @@ h4
   font-size: 18px
 h5
   font-size: 15px
+hr
+  border: none
+  border-bottom: #ccc 2px solid
 
 @mixin border-radius($radius)
   -webkit-border-radius: $radius
@@ -168,9 +171,7 @@ h5
     transition: all 0.2s
   hr
     position: relative
-    border: none
     top: -9px
-    border-bottom: #ccc 2px solid
     z-index: 10
 
 .tab-content:not(.content-active)
@@ -234,10 +235,8 @@ h5
   min-height: 80px
   hr
     position: relative
-    border: none
     top: -35px
     z-index: 10
-    border-bottom: #ccc 2px solid
   #copyright
     margin-left: 5%
     color: #ccc
