--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -45,6 +45,10 @@ h4 {
 h5 {
   font-size: 15px; }
 
+hr {
+  border: none;
+  border-bottom: #ccc 2px solid; }
+
 .container {
   width: 80%;
   min-height: calc(100vh - 100px);
@@ -165,9 +169,7 @@ h5 {
     transition: all 0.2s; }
   #tabs hr {
     position: relative;
-    border: none;
     top: -9px;
-    border-bottom: #ccc 2px solid;
     z-index: 10; }
 
 @media (min-width: 635px) {
@@ -234,10 +236,8 @@ h5 {
   min-height: 80px; }
   #footer hr {
     position: relative;
-    border: none;
     top: -35px;
-    z-index: 10;
-    border-bottom: #ccc 2px solid; }
+    z-index: 10; }
   #footer #copyright {
     margin-left: 5%;
     color: #ccc;
