Added Minecraft libraries to the list of frameworks & tools

--- a/views/index.jade
+++ b/views/index.jade
@@ -256,6 +256,7 @@ block content
                         li Nginx
                         li Git
                         li IntelliJ
+                        li Minecraft Forge/Spigot
                         li Amazon Web Services
                         li Composer
                         li Google Analytics
