Removed image sharing service for now as it isn't notable enough & currently isn't in use

--- a/views/index.jade
+++ b/views/index.jade
@@ -207,16 +207,16 @@ block content
                         a(href="https://bugg.co/watchdogger") Click here to visit it.
                 div.right-image
                     img(src="images/watchdog.png").screenshot
-            div#image-sharing.tab-content
-                div
-                    h3 Image Sharing
-                    p
-                        | For a while, I didn't have an image-sharing service that I liked. They were all either slow,
-                        | poor quality, cost money, or didn't have a good archive service. I made my own! It's not
-                        | available to the public at the moment, but eventually!
-
-                    p
-                        a(href="https://bugg.co/i/") Click here to visit it.
+            //div#image-sharing.tab-content
+            //    div
+            //        h3 Image Sharing
+            //        p
+            //            | For a while, I didn't have an image-sharing service that I liked. They were all either slow,
+            //            | poor quality, cost money, or didn't have a good archive service. I made my own! It's not
+            //            | available to the public at the moment, but eventually!
+            //
+            //        p
+            //            a(href="https://bugg.co/i/") Click here to visit it.
         div#about
             h2 About
             p
