Removed image sharing tab button

--- a/views/index.jade
+++ b/views/index.jade
@@ -151,7 +151,7 @@ block content
                 a.tab.tab-active(data-target="#minecraft-modding") Minecraft Modding
                 a.tab(data-target="#karaoke") Karaoke Panel
                 a.tab(data-target="#watchdogger") Watchdogger
-                a.tab(data-target="#image-sharing") Image Sharing
+                //a.tab(data-target="#image-sharing") Image Sharing
                 hr
 
             div#minecraft-modding.tab-content.content-active
