--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -245,6 +245,14 @@ hr
     position: relative
     z-index: 100
     background-color: #ffffff
+  #source
+    float: right
+    margin-right: 5%
+    padding: 5px
+    display: inline-block
+    position: relative
+    z-index: 100
+    background-color: #ffffff
 
 #recaptcha
   margin-top: 50px
