--- a/views/index.jade
+++ b/views/index.jade
@@ -275,4 +275,6 @@ block content
         div#recaptcha.g-recaptcha
         div#footer
             p#copyright Copyright © bugfroggy 2017
+            p#source
+              a(href="https://github.com/bugfroggy/Portfolio") Source
             hr
