updated Quickplay link to go to local page

--- a/views/index.jade
+++ b/views/index.jade
@@ -160,7 +160,7 @@ block content
                     p
                         | I started coding Minecraft mods in the Summer of 2017 using my minimal prior Java knowledge.
                         | My first mod was a mod called&nbsp;
-                        a(href="https://hypixel.net/threads/1317410/") "QuickPlay,"
+                        a(href="https://bugg.co/quickplay/") "Quickplay,"
                         |  which to this day, is my most popular mod with tens of thousands of users.
                         | Some of my other Minecraft mods:
                     ul
