--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,11 +5,9 @@ html
 
     link(rel='stylesheet', href='/stylesheets/style.css')
     script(src="https://code.jquery.com/jquery-3.2.1.min.js")
-    script(src="fa/js/fontawesome.min.js", defer)
-    script(src="fa/js/packs/regular.js", defer)
-    script(src="fa/js/packs/light.js", defer)
-    script(src="fa/js/packs/custom.js", defer)
-    script(src="fa/js/packs/brands.js", defer)
+    script(src="fa/fontawesome.min.js", defer)
+    script(src="fa/fontawesome-all.min.js", defer)
+    script(src="fa/fa-custom.js", defer)
 
     // /Includes
     // Meta data
