added Quickplay link & fontawesome svg

--- a/views/index.jade
+++ b/views/index.jade
@@ -140,6 +140,8 @@ block content
                 i.fab.fa-twitter.fa-3x.social
             a(href="https://hypixel.net/members/bugfroggy.52450/")
                 i.fac.fa-hypixel.fa-3x.social
+            a(href="https://bugg.co/quickplay/")
+                i.fac.fa-quickplay.fa-3x.social
 
         a(href="#portfolio")
             i.fal.fa-angle-down.fa-5x#down-arrow
