fixed links that weren't working

--- a/views/index.jade
+++ b/views/index.jade
@@ -167,9 +167,9 @@ block content
                         | Some of my other Minecraft mods:
                     ul
                         li
-                            a(href="minecraft.curseforge.com/projects/advancedxp") AdvancedXP
+                            a(href="https://minecraft.curseforge.com/projects/advancedxp") AdvancedXP
                         li
-                            a(href="minecraft.curseforge.com/projects/animated-crosshair") Animated Crosshair
+                            a(href="https://minecraft.curseforge.com/projects/animated-crosshair") Animated Crosshair
 
                 div.right-image
                     img(src="images/quickplay.png").screenshot
