Updated skills list

--- a/views/index.jade
+++ b/views/index.jade
@@ -241,6 +241,7 @@ block content
                     h3 Languages
                     ul
                         li Java
+                        li C++
                         li PHP
                         li Javascript
                         li HTML
@@ -262,6 +263,7 @@ block content
                         li Amazon Web Services
                         li Composer
                         li Google Analytics
+                        li Google/Firefox Extensions
                         li Google Drive
                         li Bootstrap
         div#contact
