Updated Github link

--- a/views/index.jade
+++ b/views/index.jade
@@ -134,7 +134,7 @@ block content
                 div.next.slide
                     h3 Hypixel Moderator
 
-            a(href="https://github.com/bugfroggy")
+            a(href="https://github.com/robere2")
                 i.fab.fa-github.fa-3x.social
             a(href="https://twitter.com/bugfroggy")
                 i.fab.fa-twitter.fa-3x.social
@@ -274,7 +274,7 @@ block content
                 h4 Other
                 p#contact-social
                     a(href="https://twitter.com/bugfroggy") Twitter
-                    a(href="https://github.com/bugfroggy") Github
+                    a(href="https://github.com/robere2") Github
                     a(href="https://hypixel.net/members/52450") Hypixel
         div#recaptcha.g-recaptcha
         div#footer
