--- a/views/index.jade
+++ b/views/index.jade
@@ -280,7 +280,7 @@ block content
                     a(href="https://hypixel.net/members/52450") Hypixel
         div#recaptcha.g-recaptcha
         div#footer
-            p#copyright Copyright © bugfroggy 2018
+            p#copyright Copyright © Erik Roberts 2018
             p#source
               a(href="https://github.com/bugfroggy/Portfolio") Source
             hr
