updated button active state

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -276,5 +276,9 @@ button {
   border-bottom: 3px solid #2e8350;
   border-radius: 5px;
   font: 14px "Bitter", serif; }
+  button:active {
+    background-color: #2e8350;
+    line-height: 0.9em;
+    padding-top: 0.9em; }
 
 /*# sourceMappingURL=style.css.map */
