--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -272,3 +272,7 @@ button
   border-bottom: 3px solid #2e8350
   border-radius: 5px
   font: 14px "Bitter", serif
+  &:active
+    background-color: #2e8350
+    line-height: 0.9em
+    padding-top: 0.9em
